--- a/70_pf/SRT/sub/lostfound.html
+++ b/70_pf/SRT/sub/lostfound.html
@@ -5,15 +5,100 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>유실물 신고 안내</title>
-    <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/lostfound.css">
+    <link rel="stylesheet" href="/70_pf/SRT/css/reset.css">
+    <link rel="stylesheet" href="/70_pf/SRT/css/lostfound.css">
 </head>
 
 <body>
     <div class="wrap">
-        <div class="header_container">
-            <header id="header">상단고정헤더</header>
-            <div class="header_line">서브타이틀영역</div>
+        <!-- 헤더 -->
+        <header id="header">
+            <div class="header_inner">
+                <div class="first">
+                    <div class="language">
+                        <div class="lbtn" id="lbtn">
+                            <img src="../images/nav/language.png" alt="언어설정 아이콘" />
+                            <p>Language</p>
+                            <img class="language_btn" src="../images/nav/language_btn.png" alt="아래화살표" />
+                        </div>
+                        <ul class="language_list" id="language_list">
+                            <li>
+                                <a href="#"> <span>KR</span> 한국어 </a>
+                            </li>
+                            <li>
+                                <a href="#"><span>EN</span> English</a>
+                            </li>
+                            <li>
+                                <a href="#"><span>JP</span> 日本語 </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="logo">
+                        <a href="../index.html"><img src="../images/nav/logo.png" alt="상단로고" /></a>
+                    </div>
+                    <div class="icons">
+                        <a href="#"><img src="../images/nav/login.png" alt="로그인 페이지 이동 아이콘" /></a>
+                        <a href="#"><img src="../images/nav/guest.png" alt="회원가입 페이지 이동 아이콘" /></a>
+                        <a href="#"><img src="../images/nav/Search.png" alt="검색 페이지 이동 아이콘" /></a>
+                        <a href="#"><img src="../images/nav/hamburger_btn.png" alt="사이트맵 아이콘" /></a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="nav_out">
+                <div class="nav">
+                    <div class="nav_bg"></div>
+                    <nav class="gnb">
+                        <ul class="main">
+                            <li>
+                                <a href="#">승차권</a>
+                                <ul class="sub">
+                                    <li><a href="#">승차권예약</a></li>
+                                    <li><a href="#">승차권확인</a></li>
+                                    <li><a href="#">비회원승차권</a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a href="#">이용안내</a>
+                                <ul class="sub">
+                                    <li><a href="#">역안내</a></li>
+                                    <li><a href="#">노선안내</a></li>
+                                    <li><a href="#">운임안내</a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a href="#">고객서비스</a>
+                                <ul class="sub">
+                                    <li><a href="#">공지사항</a></li>
+                                    <li><a href="#">고객센터</a></li>
+                                    <li><a href="#">자주찾는질문</a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a href="#">여행상품</a>
+                                <ul class="sub">
+                                    <li><a href="#">SRT 베스트 여행상품</a></li>
+                                    <li><a href="#">지역별 여행상품</a></li>
+                                    <li><a href="#">기간별 여행상품</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+        </header>
+        <div id="title">
+            <div class="subtitle">
+                <h2>유실물 신고 안내</h2>
+            </div>
+            <div class="submenu_bar">
+                <div class="sub_inner">
+                    <a href="#" class="home"><img src="../images/sub/home.png" alt="홈">홈</a>
+                    <div class="menu"><a href="#">고객센터<img src="../images/sub/arrow-down.png" alt="화살표"></a></div>
+                    <div class="menu"><a href="#">유실물 신고 안내<img src="../images/sub/arrow-down.png" alt="화살표"></a>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="lf_container">
             <div class="lost_info">
@@ -22,7 +107,10 @@
                 </div>
                 <div class="info_2">
                     <p>
-                        열차를 이용하면서 분실한 물건이 있다면 유실물센터 또는 고객센터(1800-1472)로<br> 이용일자, 열차번호, 이용구간, 열차호차, 좌석번호, 분실물 정보 말씀 후 문의하시거나 <br>경찰청 유실물 통합포털 LOST112(<a href="http://lost112.go.kr" target="_blank">http://lost112.go.kr</a>)에서 검색 및 확인할 수 있습니다. <br>유실물센터 : [수서역] 02-6177-8245 / [동탄역] 031-328-9505 / [평택지제역] 031-646-8805
+                        열차를 이용하면서 분실한 물건이 있다면 유실물센터 또는 고객센터(1800-1472)로<br> 이용일자, 열차번호, 이용구간, 열차호차, 좌석번호, 분실물 정보 말씀 후
+                        문의하시거나 <br>경찰청 유실물 통합포털 LOST112(<a href="http://lost112.go.kr"
+                            target="_blank">http://lost112.go.kr</a>)에서 검색 및 확인할 수 있습니다. <br>유실물센터 : [수서역] 02-6177-8245
+                        / [동탄역] 031-328-9505 / [평택지제역] 031-646-8805
                     </p>
                 </div>
             </div>
@@ -122,7 +210,72 @@
                 </table>
             </div><!-- dw_table -->
         </div><!-- lf_container -->
-        <footer class="footer"></footer>
+        <footer>
+            <div class="fupper"> <!-- footer 윗부분 -->
+                <div class="inner">
+                    <div class="rule">
+                        <ul>
+                            <li><a href="https://www.srail.or.kr/cms/archive.do?pageId=KR9903000000">개인정보처리방침</a></li>
+                            <li><a href="https://etk.srail.kr/cms/archive.do?pageId=TK0501010000">고객서비스헌장</a></li>
+                            <li><a href="https://etk.srail.kr/cms/archive.do?pageId=TK0501020000">여객운송약관/부속약관</a></li>
+                        </ul>
+                    </div>
+                    <div class="sns">
+                        <ul>
+                            <li><a href="#"><img src="/70_pf/SRT/images/footer/facebook.png" alt=""></a></li>
+                            <li><a href="#"><img src="/70_pf/SRT/images/footer/instagram.png" alt=""></a></li>
+                            <li><a href="#"><img src="/70_pf/SRT/images/footer/line.png" alt=""></a></li>
+                            <li><a href="#"><img src="/70_pf/SRT/images/footer/kakao_channel.png" alt=""></a></li>
+                            <li><a href="#"><img src="/70_pf/SRT/images/footer/band.png" alt=""></a></li>
+                        </ul>
+                    </div> <!-- end of .sns -->
+                </div> <!-- end of .fupper .inner -->
+            </div> <!-- end of .fupper -->
+            <div class="flower">
+                <div class="inner">
+                    <div class="left">
+                        <div class="blogo">
+                            <img src="/70_pf/SRT/images/footer/blogo.png" alt="blogo">
+                        </div> <!-- end of .blogo -->
+                        <p>대표자 : 이종국 ㅣ 상호: 주식회사 에스알 ㅣ 사업자등록: 305-86-31590 ㅣ 통신판매업신고: 2016-서울강남-03705호<br>
+                            (우: 06367) 서울특별시 강남구 광평로 56길 12 희림빌딩 | TEL. 1800-1472 l FAX. 6484-4093<br>
+                            Copyright 2018. SR Inc. All rights reserved.</p>
+                    </div> <!-- end of left -->
+                    <div class="right">
+                        <div class="fs">
+                            <form action="#">
+                                <select name="fs" id="fs">
+                                    <option value="">유관기관 바로가기</option>
+                                    <option value="">코레일</option>
+                                    <option value="">국토교통부</option>
+                                </select>
+                            </form>
+                        </div> <!-- end of .fs -->
+                        <div class="ads">
+                            <ul>
+                                <li><a href="https://etk.srail.kr/cms/article/view.do?postNo=76&pageId=TK0502000000"><img
+                                            src="/70_pf/SRT/images/footer/ad1.png" alt="ad1"></a></li>
+                                <li><a href="https://etk.srail.kr/cms/article/view.do?postNo=91&pageId=TK0502000000"><img
+                                            src="/70_pf/SRT/images/footer/ad2.png" alt="ad2"></a></li>
+                                <li><a href="#"><img src="/70_pf/SRT/images/footer/ad3.png" alt="ad3"></a></li>
+                                <li><a href="https://partners.srail.or.kr/login.do"><img
+                                            src="/70_pf/SRT/images/footer/ad4.png" alt="ad4"></a></li>
+                                <li><a href="https://etk.srail.kr/cms/article/view.do?postNo=536&pageId=TK0502000000"><img
+                                            src="/70_pf/SRT/images/footer/ad5.png" alt="ad5"></a></li>
+                                <li><a href="https://etk.srail.kr/cms/article/view.do?postNo=359&pageId=TK0502000000"><img
+                                            src="/70_pf/SRT/images/footer/ad6.png" alt="ad6"></a></li>
+                                <li><a href="https://etk.srail.kr/cms/article/view.do?postNo=358&pageId=TK0502000000"><img
+                                            src="/70_pf/SRT/images/footer/ad7.png" alt="ad7"></a></li>
+                                <li><a href="https://etk.srail.kr/cms/article/view.do?postNo=365&pageId=TK0502000000"><img
+                                            src="/70_pf/SRT/images/footer/ad8.png" alt="ad8"></a></li>
+                                <li><a href="https://etk.srail.kr/cms/article/view.do?postNo=393&pageId=TK0502000000"><img
+                                            src="/70_pf/SRT/images/footer/ad9.png" alt="ad9"></a></li>
+                            </ul>
+                        </div><!-- end .ads -->
+                    </div><!-- end of right -->
+                </div> <!-- end of .flower .inner -->
+            </div><!-- end of .flower -->
+        </footer>
     </div><!-- wrap -->
 </body>
 
