--- a/70_pf/SRT/sub/tour_best.html
+++ b/70_pf/SRT/sub/tour_best.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SRT BEST 여행상품</title>
-    <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/tour_best.css">
+    <link rel="stylesheet" href="/70_pf/SRT/css/reset.css">
+    <link rel="stylesheet" href="/70_pf/SRT/css/tour_best.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script src="../script/script_best.js"></script>
+    <script src="/70_pf/SRT/script/script_best.js"></script>
 
 </head>
 
@@ -130,9 +130,9 @@
                                 </ul> -->
                                 <ul>
                                     <li><button type="button" class="filter_btn reserved" data-filter="reserved"
-                                            data-value="예약가능">예약가능</button></li>
+                                            data-value="예약가능">예약가능<img src="/70_pf/SRT/images/sub/btn_check.svg" alt="체크"></button></li>
                                     <li><button type="button" class="filter_btn reserved" data-filter="reserved"
-                                            data-value="출발확정">출발확정</button></li>
+                                            data-value="출발확정">출발확정<img src="/70_pf/SRT/images/sub/btn_check.svg" alt="체크"></button></li>
                                 </ul>
                             </div>
 
@@ -147,15 +147,15 @@
                                 <div class="tour_main">
                                     <ul>
                                         <li><button type="button" class="filter_btn tour_subway" data-filter="subway"
-                                                data-value="경부선">경부선</button></li>
+                                                data-value="경부선">경부선<img src="/70_pf/SRT/images/sub/btn_check.svg" alt="체크"></button></li>
                                         <li><button type="button" class="filter_btn tour_subway" data-filter="subway"
-                                                data-value="호남선">호남선</button></li>
+                                                data-value="호남선">호남선<img src="/70_pf/SRT/images/sub/btn_check.svg" alt="체크"></button></li>
                                         <li><button type="button" class="filter_btn tour_subway" data-filter="subway"
-                                                data-value="전라선">전라선</button></li>
+                                                data-value="전라선">전라선<img src="/70_pf/SRT/images/sub/btn_check.svg" alt="체크"></button></li>
                                         <li><button type="button" class="filter_btn tour_subway" data-filter="subway"
-                                                data-value="경전선">경전선</button></li>
+                                                data-value="경전선">경전선<img src="/70_pf/SRT/images/sub/btn_check.svg" alt="체크"></button></li>
                                         <li><button type="button" class="filter_btn tour_subway" data-filter="subway"
-                                                data-value="동해선">동해선</button></li>
+                                                data-value="동해선">동해선<img src="/70_pf/SRT/images/sub/btn_check.svg" alt="체크"></button></li>
                                     </ul>
 
                                 </div><!-- tour_main -->
@@ -171,11 +171,11 @@
                                 </ul> -->
                                 <ul>
                                     <li><button type="button" class="filter_btn duration" data-filter="duration"
-                                            data-value="당일">당일</button></li>
+                                            data-value="당일">당일<img src="/70_pf/SRT/images/sub/btn_check.svg" alt="체크"></button></li>
                                     <li><button type="button" class="filter_btn duration" data-filter="duration"
-                                            data-value="1박2일">1박2일</button></li>
+                                            data-value="1박2일">1박2일<img src="/70_pf/SRT/images/sub/btn_check.svg" alt="체크"></button></li>
                                     <li><button type="button" class="filter_btn duration" data-filter="duration"
-                                            data-value="2박3일">2박3일</button></li>
+                                            data-value="2박3일">2박3일<img src="/70_pf/SRT/images/sub/btn_check.svg" alt="체크"></button></li>
                                 </ul>
                             </div>
 
@@ -208,19 +208,19 @@
                                 </ul> -->
                                 <ul>
                                     <li><button type="button" class="filter_btn type" data-filter="type"
-                                            data-value="기차여행">기차여행</button></li>
+                                            data-value="기차여행">기차여행<img src="/70_pf/SRT/images/sub/btn_check.svg" alt="체크"></button></li>
                                     <li><button type="button" class="filter_btn type" data-filter="type"
-                                            data-value="시티투어">시티투어</button></li>
+                                            data-value="시티투어">시티투어<img src="/70_pf/SRT/images/sub/btn_check.svg" alt="체크"></button></li>
                                     <li><button type="button" class="filter_btn type" data-filter="type"
-                                            data-value="축제">축제</button></li>
+                                            data-value="축제">축제<img src="/70_pf/SRT/images/sub/btn_check.svg" alt="체크"></button></li>
                                     <li><button type="button" class="filter_btn type" data-filter="type"
-                                            data-value="계절">계절</button></li>
+                                            data-value="계절">계절<img src="/70_pf/SRT/images/sub/btn_check.svg" alt="체크"></button></li>
                                     <li><button type="button" class="filter_btn type" data-filter="type"
-                                            data-value="체험">체험</button></li>
+                                            data-value="체험">체험<img src="/70_pf/SRT/images/sub/btn_check.svg" alt="체크"></button></li>
                                     <li><button type="button" class="filter_btn type" data-filter="type"
-                                            data-value="산/강/바다">산/강/바다</button></li>
+                                            data-value="산/강/바다">산/강/바다<img src="/70_pf/SRT/images/sub/btn_check.svg" alt="체크"></button></li>
                                     <li><button type="button" class="filter_btn type" data-filter="type"
-                                            data-value="관광지">관광지</button></li>
+                                            data-value="관광지">관광지<img src="/70_pf/SRT/images/sub/btn_check.svg" alt="체크"></button></li>
                                 </ul>
                             </div>
                         </div>
