--- a/70_pf/SRT/sub/trip_best.html
+++ b/70_pf/SRT/sub/trip_best.html
@@ -98,8 +98,8 @@
             <div class="submenu_bar">
                 <div class="sub_inner">
                     <a href="#" class="home"><img src="/70_pf/srt/images/sub/home.png" alt="홈">홈</a>
-                    <div class="menu"><a href="#">여행상품<img src="/70_pf/srt/images/sub/arrow-down.png" alt="화살표"></a></div>
-                    <div class="menu"><a href="#">SRT 베스트 여행상품<img src="/70_pf/srt/images/sub/arrow-down.png" alt="화살표"></a>
+                    <div class="menu"><a href="#">여행상품<img src="/70_pf/srt/images/sub/arrow_down.png" alt="화살표"></a></div>
+                    <div class="menu"><a href="#">SRT 베스트 여행상품<img src="/70_pf/srt/images/sub/arrow_down.png" alt="화살표"></a>
                     </div>
                 </div>
             </div>
@@ -241,7 +241,7 @@
                         <ul class="best_down" id="best_down">
                             <li><a href="/70_pf/srt/sub/trip_best.html">SRT 베스트 여행상품</a></li>
                             <li><a href="/70_pf/srt/sub/trip_region.html">지역별 여행상품</a></li>
-                            <li><a href="#">기간별 여행상품</a></li>
+                            <li><a href="/70_pf/srt/sub/trip_day.html">기간별 여행상품</a></li>
                         </ul>
                     </nav>
                 </div>
