--- a/05_html+cs+js/3-6/3-6-02_array배열순회.html
+++ b/05_html+cs+js/3-6/3-6-02_array배열순회.html
@@ -75,11 +75,35 @@
             console.log(i); // 0 1 2 3
             console.log(city[i]); // 서울 대전 대구 부산 >> 배열의 값
         }
-        
+
         console.log('===for of===')
         for (let val of city) {
             console.log(val);
         }
+
+        /* 
+        map()
+        기존 배열을 이용하여 새로운 배열을 만든다.
+        */
+        console.log('===map===')
+
+        const base = [10, 20, 30];
+        base.map(function (value, index, array) {
+            console.log(value);
+            console.log(index);
+            console.log(array);
+        });
+        console.log('===map2===')
+        const area = base.map(function (value) {
+            return value * 4;
+        });
+        console.log(area);
+
+        console.log('===forEach===')
+        area = base.forEach(function (value) {
+            return value * 8;
+        });
+        console.log(area);
     </script>
 </body>
 
