--- a/70_pf/SRT/sub/trip_best.html
+++ b/70_pf/SRT/sub/trip_best.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>srt BEST 여행상품</title>
+    <title>SRT BEST 여행상품</title>
     <link rel="stylesheet" href="/70_pf/srt/css/reset.css">
     <link rel="stylesheet" href="/70_pf/srt/css/trip_best.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
