--- a/70_pf/tourist2/sub/join.html
+++ b/70_pf/tourist2/sub/join.html
@@ -10,7 +10,7 @@
     <script src="/70_pf/tourist2/js/slider.js"></script>
     <script src="/70_pf/tourist2/js/nav.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bxslider/4.2.17/jquery.bxslider.css">
-    <link rel="stylesheet" href="/70_pf/tourist2/css/main.css">
+    <link rel="stylesheet" href="/70_pf/tourist2/css/join.css">
 </head>
 
 <body>
@@ -59,43 +59,75 @@
     </header>
 
     <!-- 섹션1 -->
+    <div id="location_area">
+        <div class="bg_box">
+            <div class="tit_page">
+                <h2>TOURIST <span>in</span> TOUR</h2>
+                <p><span>MEMBER</span> / <span>회원가입</span></p>
+            </div>
+        </div>
+    </div>
     <!-- 섹션2 -->
-    <div>
-        <p>* 필수입력으로 반드시 입력하셔야 합니다.</p>
-        <form action="" method="post">
+    <div id="join">
+        <p class="required_input">* 필수입력으로 반드시 입력하셔야 합니다.</p>
+        <form action="" method="post" class="join_form">
             <ul>
                 <li>
-                    <label for=""><span>*</span>이메일</label>
-                    <input type="text">@<input type="text">
+                    <label for=""><span class="required_input">*</span>이메일</label>
+                    <input type="text">@<input type="text" required>
                     <select name="" id="">
                         <option value="">직접입력</option>
                         <option value="naver">naver.com</option>
                         <option value="google">google.com</option>
                     </select>
                 </li>
+
+                <!-- 작성자명, 비밀번호, 비밀번호 확인, 연락처 -->
                 <li>
-                    <label for=""><span>*</span>작성자명</label>
+                    <label for=""><span class="required_input">*</span>작성자명</label>
+                    <input type="text" placeholder="이름을 입력해주세요." required class="w100p">
                 </li>
                 <li>
-                    <label for=""><span>*</span>비밀번호</label>
+                    <label for=""><span class="required_input">*</span>비밀번호</label>
+                    <input type="password" placeholder="비밀번호를 입력해주세요." required class="w100p">
+
                 </li>
                 <li>
-                    <label for=""><span>*</span>비밀번호 확인</label>
+                    <label for=""><span class="required_input">*</span>비밀번호 확인</label>
+                    <input type="password" placeholder="비밀번호를 다시 입력해주세요." required class="w100p">
+
                 </li>
                 <li>
-                    <label for=""><span>*</span>연락처</label>
+                    <label for=""><span class="required_input">*</span>연락처</label>
+                    <input type="tel" placeholder="'-' 없이 숫자만 입력해주세요." required class="w100p">
+
                 </li>
+
+                <!-- 라디오버튼 -->
                 <li>
                     <label for="">성별</label>
+                    <input type="radio" name="gender" id="man">
+                    <label for="man" class="gender">남</label>
+                    <input type="radio" name="gender" id="woman">
+                    <label for="woman" class="gender">여</label>
                 </li>
+
+                <!-- 확인란(체크박스) -->
                 <li>
                     <label for="">개인정보 활용동의</label>
+                    <input type="checkbox" id="agree">
+                    <label for="argee">동의함</label>
                 </li>
+
+                <!-- textarea -->
                 <li>
-                    <label for="">문의내용</label>
+                    <label for="inquiry_detail">문의내용</label>
+                    <textarea name="inquiry_detail" id="inquiry_detail" placeholder="간단한 상담 요청 사항을 남겨주시면 보다 상세한 상담이 가능합니다. 전화 상담 희망시 기재 부탁드립니다."></textarea>
                 </li>
             </ul>
 
+            <!-- 등록버튼 -->
+            <div class="register_btn"><button>등록</button></div>
         </form>
     </div>
 
