--- a/70_pf/SRT/index.html
+++ b/70_pf/SRT/index.html
@@ -20,9 +20,9 @@
             <div class="first">
                 <div class="language">
                     <div class="lbtn" id="lbtn">
-                        <img src="./images/nav/language.png" alt="언어설정 아이콘">
+                        <img src="/w0310/70_pf/srt/images/nav/language.png" alt="언어설정 아이콘">
                         <p>Language</p>
-                        <img class="language_btn" src="./images/nav/language_btn.png" alt="아래화살표">
+                        <img class="language_btn" src="/w0310/70_pf/srt/images/nav/language_btn.png" alt="아래화살표">
                     </div>
                     <ul class="language_list" id="language_list">
                         <li><a href="#"> <span>KR</span> 한국어 </a></li>
