--- a/70_pf/SRT/sub/lostfound.html
+++ b/70_pf/SRT/sub/lostfound.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>유실물 신고 안내</title>
-    <link rel="stylesheet" href="/70_pf/SRT/css/reset.css">
-    <link rel="stylesheet" href="/70_pf/SRT/css/lostfound.css">
+    <link rel="stylesheet" href="/w0310/70_pf/srt/css/reset.css">
+    <link rel="stylesheet" href="/w0310/70_pf/srt/css/lostfound.css">
 </head>
 
 <body>
@@ -17,9 +17,9 @@
                 <div class="first">
                     <div class="language">
                         <div class="lbtn" id="lbtn">
-                            <img src="../images/nav/language.png" alt="언어설정 아이콘" />
+                            <img src="/w0310/70_pf/srt/images/nav/language.png" alt="언어설정 아이콘" />
                             <p>Language</p>
-                            <img class="language_btn" src="../images/nav/language_btn.png" alt="아래화살표" />
+                            <img class="language_btn" src="/w0310/70_pf/srt/images/nav/language_btn.png" alt="아래화살표" />
                         </div>
                         <ul class="language_list" id="language_list">
                             <li>
@@ -34,13 +34,13 @@
                         </ul>
                     </div>
                     <div class="logo">
-                        <a href="../index.html"><img src="../images/nav/logo.png" alt="상단로고" /></a>
+                        <a href="/w0310/70_pf/srt/index.html"><img src="/w0310/70_pf/srt/images/nav/logo.png" alt="상단로고" /></a>
                     </div>
                     <div class="icons">
-                        <a href="#"><img src="../images/nav/login.png" alt="로그인 페이지 이동 아이콘" /></a>
-                        <a href="#"><img src="../images/nav/guest.png" alt="회원가입 페이지 이동 아이콘" /></a>
-                        <a href="#"><img src="../images/nav/Search.png" alt="검색 페이지 이동 아이콘" /></a>
-                        <a href="#"><img src="../images/nav/hamburger_btn.png" alt="사이트맵 아이콘" /></a>
+                        <a href="#"><img src="/w0310/70_pf/srt/images/nav/login.png" alt="로그인 페이지 이동 아이콘" /></a>
+                        <a href="#"><img src="/w0310/70_pf/srt/images/nav/guest.png" alt="회원가입 페이지 이동 아이콘" /></a>
+                        <a href="#"><img src="/w0310/70_pf/srt/images/nav/Search.png" alt="검색 페이지 이동 아이콘" /></a>
+                        <a href="#"><img src="/w0310/70_pf/srt/images/nav/hamburger_btn.png" alt="사이트맵 아이콘" /></a>
                     </div>
                 </div>
             </div>
@@ -93,9 +93,9 @@
             </div>
             <div class="submenu_bar">
                 <div class="sub_inner">
-                    <a href="#" class="home"><img src="../images/sub/home.png" alt="홈">홈</a>
-                    <div class="menu"><a href="#">고객센터<img src="../images/sub/arrow-down.png" alt="화살표"></a></div>
-                    <div class="menu"><a href="#">유실물 신고 안내<img src="../images/sub/arrow-down.png" alt="화살표"></a>
+                    <a href="#" class="home"><img src="/w0310/70_pf/srt/images/sub/home.png" alt="홈">홈</a>
+                    <div class="menu"><a href="#">고객센터<img src="/w0310/70_pf/srt/images/sub/arrow-down.png" alt="화살표"></a></div>
+                    <div class="menu"><a href="#">유실물 신고 안내<img src="/w0310/70_pf/srt/images/sub/arrow-down.png" alt="화살표"></a>
                     </div>
                 </div>
             </div>
@@ -193,7 +193,7 @@
                                 <div class="td_img">
                                     <a href="다운로드파일경로" class="hwp">
                                         다운로드
-                                        <img src="../images/sub/download.png" alt="대리위임장hwp문서">
+                                        <img src="/w0310/70_pf/srt/images/sub/download.png" alt="대리위임장hwp문서">
                                     </a>
                                 </div>
                             </td>
@@ -201,7 +201,7 @@
                                 <div class="td_img">
                                     <a href="다운로드파일경로" class="pdf">
                                         다운로드
-                                        <img src="../images/sub/download.png" alt="대리위임장pdf문서">
+                                        <img src="/w0310/70_pf/srt/images/sub/download.png" alt="대리위임장pdf문서">
                                     </a>
                                 </div>
                             </td>
@@ -222,11 +222,11 @@
                     </div>
                     <div class="sns">
                         <ul>
-                            <li><a href="#"><img src="/70_pf/SRT/images/footer/facebook.png" alt=""></a></li>
-                            <li><a href="#"><img src="/70_pf/SRT/images/footer/instagram.png" alt=""></a></li>
-                            <li><a href="#"><img src="/70_pf/SRT/images/footer/line.png" alt=""></a></li>
-                            <li><a href="#"><img src="/70_pf/SRT/images/footer/kakao_channel.png" alt=""></a></li>
-                            <li><a href="#"><img src="/70_pf/SRT/images/footer/band.png" alt=""></a></li>
+                            <li><a href="#"><img src="/w0310/70_pf/srt/images/footer/facebook.png" alt=""></a></li>
+                            <li><a href="#"><img src="/w0310/70_pf/srt/images/footer/instagram.png" alt=""></a></li>
+                            <li><a href="#"><img src="/w0310/70_pf/srt/images/footer/line.png" alt=""></a></li>
+                            <li><a href="#"><img src="/w0310/70_pf/srt/images/footer/kakao_channel.png" alt=""></a></li>
+                            <li><a href="#"><img src="/w0310/70_pf/srt/images/footer/band.png" alt=""></a></li>
                         </ul>
                     </div> <!-- end of .sns -->
                 </div> <!-- end of .fupper .inner -->
@@ -235,7 +235,7 @@
                 <div class="inner">
                     <div class="left">
                         <div class="blogo">
-                            <img src="/70_pf/SRT/images/footer/blogo.png" alt="blogo">
+                            <img src="/70_pf/srt/images/footer/blogo.png" alt="blogo">
                         </div> <!-- end of .blogo -->
                         <p>대표자 : 이종국 ㅣ 상호: 주식회사 에스알 ㅣ 사업자등록: 305-86-31590 ㅣ 통신판매업신고: 2016-서울강남-03705호<br>
                             (우: 06367) 서울특별시 강남구 광평로 56길 12 희림빌딩 | TEL. 1800-1472 l FAX. 6484-4093<br>
@@ -254,22 +254,22 @@
                         <div class="ads">
                             <ul>
                                 <li><a href="https://etk.srail.kr/cms/article/view.do?postNo=76&pageId=TK0502000000"><img
-                                            src="/70_pf/SRT/images/footer/ad1.png" alt="ad1"></a></li>
+                                            src="/w0310/70_pf/srt/images/footer/ad1.png" alt="ad1"></a></li>
                                 <li><a href="https://etk.srail.kr/cms/article/view.do?postNo=91&pageId=TK0502000000"><img
-                                            src="/70_pf/SRT/images/footer/ad2.png" alt="ad2"></a></li>
-                                <li><a href="#"><img src="/70_pf/SRT/images/footer/ad3.png" alt="ad3"></a></li>
+                                            src="/w0310/70_pf/srt/images/footer/ad2.png" alt="ad2"></a></li>
+                                <li><a href="#"><img src="/w0310/70_pf/srt/images/footer/ad3.png" alt="ad3"></a></li>
                                 <li><a href="https://partners.srail.or.kr/login.do"><img
-                                            src="/70_pf/SRT/images/footer/ad4.png" alt="ad4"></a></li>
+                                            src="/w0310/70_pf/srt/images/footer/ad4.png" alt="ad4"></a></li>
                                 <li><a href="https://etk.srail.kr/cms/article/view.do?postNo=536&pageId=TK0502000000"><img
-                                            src="/70_pf/SRT/images/footer/ad5.png" alt="ad5"></a></li>
+                                            src="/w0310/70_pf/srt/images/footer/ad5.png" alt="ad5"></a></li>
                                 <li><a href="https://etk.srail.kr/cms/article/view.do?postNo=359&pageId=TK0502000000"><img
-                                            src="/70_pf/SRT/images/footer/ad6.png" alt="ad6"></a></li>
+                                            src="/w0310/70_pf/srt/images/footer/ad6.png" alt="ad6"></a></li>
                                 <li><a href="https://etk.srail.kr/cms/article/view.do?postNo=358&pageId=TK0502000000"><img
-                                            src="/70_pf/SRT/images/footer/ad7.png" alt="ad7"></a></li>
+                                            src="/w0310/70_pf/srt/images/footer/ad7.png" alt="ad7"></a></li>
                                 <li><a href="https://etk.srail.kr/cms/article/view.do?postNo=365&pageId=TK0502000000"><img
-                                            src="/70_pf/SRT/images/footer/ad8.png" alt="ad8"></a></li>
+                                            src="/w0310/70_pf/srt/images/footer/ad8.png" alt="ad8"></a></li>
                                 <li><a href="https://etk.srail.kr/cms/article/view.do?postNo=393&pageId=TK0502000000"><img
-                                            src="/70_pf/SRT/images/footer/ad9.png" alt="ad9"></a></li>
+                                            src="/w0310/70_pf/srt/images/footer/ad9.png" alt="ad9"></a></li>
                             </ul>
                         </div><!-- end .ads -->
                     </div><!-- end of right -->
