--- a/05_html+cs+js/3-6/3-6-02_RegExp객체.html
+++ b/05_html+cs+js/3-6/3-6-02_RegExp객체.html
@@ -68,7 +68,20 @@
                 *
                     * 앞의 문자가 0번 이상 한복을 의미한다.
                     /a*b/  'b' 'ab' 'aab' 'aaab' 'aaaab'
+                +
+                    + 앞의 문자가 1번 이상 반복을 의미한다.
+                    /a+b/ 'ab' 'aab' 'aaab' 'aaaab'
+                ?
+                    ? 앞의 문자가 0번 또는 1번 의미한다.
+                    /a?b/ -> b, ab
+                {}
+                    /\{3}/ -> 숫자 3개
         */
+
+        // 핸드폰
+        const hpReg = /^\d{10,11}$/
+        // 이메일
+        const emailReg = /^[A-Za-z0-9!#%^&*_-]+@[A-Za-z0-9_-]+(\.[A-Za-z0-9_-]+){1,2}/;
     </script>
 </body>
 
