--- a/70_pf/SRT/section2.html
+++ b/70_pf/SRT/section2.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>여행상품</title>
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/w0310/70_pf/srt/css/reset.css">
+    <link rel="stylesheet" href="/w0310/70_pf/srt/css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script src="script/script.js"></script>
+    <script src="/w0310/70_pf/srt/script/script.js"></script>
 </head>
 
 <body>
@@ -18,25 +18,25 @@
     <div id="section2">
         <!-- 타이틀 -->
         <div class="section2_title">
-            <h1>추천여행상품</h1>
+            <h1>SRT 여행상품</h1>
             <p>SRT와 함께할 수 있는 다양한 여행상품을 만나보세요.</p>
         </div>
 
         <!-- 탭메뉴 버튼 -->
-        <div class="tabs">
+        <!-- <div class="tabs">
             <span class="tour_btn">
                 <a href="#" class="tab_btn active">SRT 베스트 여행상품</a>
                 <a href="#" class="tab_btn">지역별 여행상품</a>
                 <a href="#" class="tab_btn">기간별 여행상품</a>
             </span>
-        </div><!-- //.tabs -->
+        </div> -->
 
         <!-- 슬라이드 화살표 버튼 -->
         <div class="arrow_left"><img src="images/arrow_left.svg" alt="왼쪽슬라이드버튼"></div>
         <div class="arrow_right"><img src="images/arrow_right.svg" alt="오른쪽슬라이드버튼"></div>
 
         <!-- 캐로셀 컨텐츠 부분 -->
-        <div class="tour_carousel_container active" id="content-0">
+        <div class="tour_carousel_container active">
             <div class="tour_area">
                 <ul class="tour_carousel">
                     <li class="tour_carousel_contents">
@@ -100,198 +100,6 @@
                         </div>
                     </li>
                     <li class="tour_carousel_contents">
-                        <div id="tour_twoThree">
-                            <div class="tour_img">
-                                <a href="#">
-                                    <img src="images/tour_image4.png" alt="여행썸네일4">
-                                </a>
-                            </div>
-                            <div class="tour_text">
-                                <p class="station_name">광주송정역</p>
-                                <h3 class="tour_title">시인의 섬 보길도 &#183; 청산도 &#183; 해남</h3>
-                                <p class="tour_won">284,000원~</p>
-                                <p class="tour_way">&#91;홍익여행사&#93; 2박3일 &#183; 최소8인</p>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="tour_carousel_contents">
-                        <div id="tour_twoThree">
-                            <div class="tour_img">
-                                <a href="#">
-                                    <img src="images/tour_image4.png" alt="여행썸네일4">
-                                </a>
-                            </div>
-                            <div class="tour_text">
-                                <p class="station_name">광주송정역</p>
-                                <h3 class="tour_title">시인의 섬 보길도 &#183; 청산도 &#183; 해남</h3>
-                                <p class="tour_won">284,000원~</p>
-                                <p class="tour_way">&#91;홍익여행사&#93; 2박3일 &#183; 최소8인</p>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="tour_carousel_contents">
-                        <div id="tour_twoThree">
-                            <div class="tour_img">
-                                <a href="#">
-                                    <img src="images/tour_image4.png" alt="여행썸네일4">
-                                </a>
-                            </div>
-                            <div class="tour_text">
-                                <p class="station_name">광주송정역</p>
-                                <h3 class="tour_title">시인의 섬 보길도 &#183; 청산도 &#183; 해남</h3>
-                                <p class="tour_won">284,000원~</p>
-                                <p class="tour_way">&#91;홍익여행사&#93; 2박3일 &#183; 최소8인</p>
-                            </div>
-                        </div>
-                    </li>
-                </ul>
-            </div><!-- //.tour_area -->
-        </div>
-        <div class="tour_carousel_container" id="content-1">
-            <div class="tour_area">
-                <ul class="tour_carousel">
-                    <li class="tour_carousel_contents">
-                        <div id="tour_oneday">
-                            <div class="tour_img">
-                                <a href="#">
-                                    <img src="images/tour_image2.png" alt="여행썸네일2">
-                                </a>
-                            </div>
-                            <div class="tour_text">
-                                <p class="station_name">익산역</p>
-                                <h3 class="tour_title">곡성 장미축제 &#183; 전주 한옥마을</h3>
-                                <p class="tour_won">119,000원~</p>
-                                <p class="tour_way">&#91;홍익여행사&#93; 당일 &#183; 최소10인</p>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="tour_carousel_contents">
-                        <div id="our_region">
-                            <div class="tour_img">
-                                <a href="#">
-                                    <img src="images/tour_image1.png" alt="여행썸네일1">
-                                </a>
-                            </div>
-                            <div class="tour_text">
-                                <p class="station_name">부산역</p>
-                                <h3 class="tour_title">부산이야기 1탄</h3>
-                                <p class="tour_won">151,000원~</p>
-                                <p class="tour_way">&#91;여행공방&#93; 당일 &#183; 최소4인</p>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="tour_carousel_contents">
-                        <div id="tour_twoThree">
-                            <div class="tour_img">
-                                <a href="#">
-                                    <img src="images/tour_image4.png" alt="여행썸네일4">
-                                </a>
-                            </div>
-                            <div class="tour_text">
-                                <p class="station_name">광주송정역</p>
-                                <h3 class="tour_title">시인의 섬 보길도 &#183; 청산도 &#183; 해남</h3>
-                                <p class="tour_won">284,000원~</p>
-                                <p class="tour_way">&#91;홍익여행사&#93; 2박3일 &#183; 최소8인</p>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="tour_carousel_contents">
-                        <div id="tour_oneTwo">
-                            <div class="tour_img">
-                                <a href="#">
-                                    <img src="images/tour_image3.png" alt="여행썸네일3">
-                                </a>
-                            </div>
-                            <div class="tour_text">
-                                <p class="station_name">경주역</p>
-                                <h3 class="tour_title">경주 &#183; 울산 &#183; 부산여행</h3>
-                                <p class="tour_won">434,000원~</p>
-                                <p class="tour_way">&#91;홍익여행사&#93; 2박3일 &#183; 최소8인</p>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="tour_carousel_contents">
-                        <div id="tour_twoThree">
-                            <div class="tour_img">
-                                <a href="#">
-                                    <img src="images/tour_image4.png" alt="여행썸네일4">
-                                </a>
-                            </div>
-                            <div class="tour_text">
-                                <p class="station_name">광주송정역</p>
-                                <h3 class="tour_title">시인의 섬 보길도 &#183; 청산도 &#183; 해남</h3>
-                                <p class="tour_won">284,000원~</p>
-                                <p class="tour_way">&#91;홍익여행사&#93; 2박3일 &#183; 최소8인</p>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="tour_carousel_contents">
-                        <div id="tour_twoThree">
-                            <div class="tour_img">
-                                <a href="#">
-                                    <img src="images/tour_image4.png" alt="여행썸네일4">
-                                </a>
-                            </div>
-                            <div class="tour_text">
-                                <p class="station_name">광주송정역</p>
-                                <h3 class="tour_title">시인의 섬 보길도 &#183; 청산도 &#183; 해남</h3>
-                                <p class="tour_won">284,000원~</p>
-                                <p class="tour_way">&#91;홍익여행사&#93; 2박3일 &#183; 최소8인</p>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="tour_carousel_contents">
-                        <div id="tour_twoThree">
-                            <div class="tour_img">
-                                <a href="#">
-                                    <img src="images/tour_image4.png" alt="여행썸네일4">
-                                </a>
-                            </div>
-                            <div class="tour_text">
-                                <p class="station_name">광주송정역</p>
-                                <h3 class="tour_title">시인의 섬 보길도 &#183; 청산도 &#183; 해남</h3>
-                                <p class="tour_won">284,000원~</p>
-                                <p class="tour_way">&#91;홍익여행사&#93; 2박3일 &#183; 최소8인</p>
-                            </div>
-                        </div>
-                    </li>
-                </ul>
-            </div><!-- //.tour_area -->
-        </div>
-        <div class="tour_carousel_container" id="content-2">
-            <div class="tour_area">
-                <ul class="tour_carousel">
-                    <li class="tour_carousel_contents">
-                        <div id="tour_twoThree">
-                            <div class="tour_img">
-                                <a href="#">
-                                    <img src="images/tour_image4.png" alt="여행썸네일4">
-                                </a>
-                            </div>
-                            <div class="tour_text">
-                                <p class="station_name">광주송정역</p>
-                                <h3 class="tour_title">시인의 섬 보길도 &#183; 청산도 &#183; 해남</h3>
-                                <p class="tour_won">284,000원~</p>
-                                <p class="tour_way">&#91;홍익여행사&#93; 2박3일 &#183; 최소8인</p>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="tour_carousel_contents">
-                        <div id="our_region">
-                            <div class="tour_img">
-                                <a href="#">
-                                    <img src="images/tour_image1.png" alt="여행썸네일1">
-                                </a>
-                            </div>
-                            <div class="tour_text">
-                                <p class="station_name">부산역</p>
-                                <h3 class="tour_title">부산이야기 1탄</h3>
-                                <p class="tour_won">151,000원~</p>
-                                <p class="tour_way">&#91;여행공방&#93; 당일 &#183; 최소4인</p>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="tour_carousel_contents">
                         <div id="tour_oneday">
                             <div class="tour_img">
                                 <a href="#">
@@ -336,43 +144,14 @@
                             </div>
                         </div>
                     </li>
-                    <li class="tour_carousel_contents">
-                        <div id="tour_twoThree">
-                            <div class="tour_img">
-                                <a href="#">
-                                    <img src="images/tour_image4.png" alt="여행썸네일4">
-                                </a>
-                            </div>
-                            <div class="tour_text">
-                                <p class="station_name">광주송정역</p>
-                                <h3 class="tour_title">시인의 섬 보길도 &#183; 청산도 &#183; 해남</h3>
-                                <p class="tour_won">284,000원~</p>
-                                <p class="tour_way">&#91;홍익여행사&#93; 2박3일 &#183; 최소8인</p>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="tour_carousel_contents">
-                        <div id="tour_twoThree">
-                            <div class="tour_img">
-                                <a href="#">
-                                    <img src="images/tour_image4.png" alt="여행썸네일4">
-                                </a>
-                            </div>
-                            <div class="tour_text">
-                                <p class="station_name">광주송정역</p>
-                                <h3 class="tour_title">시인의 섬 보길도 &#183; 청산도 &#183; 해남</h3>
-                                <p class="tour_won">284,000원~</p>
-                                <p class="tour_way">&#91;홍익여행사&#93; 2박3일 &#183; 최소8인</p>
-                            </div>
-                        </div>
-                    </li>
+
                 </ul>
             </div><!-- //.tour_area -->
         </div>
 
         <!-- 여행상품 더보기 -->
         <div class="tour_button">
-            <a href="sub/tour_best.html">SRT 여행상품 더보기</a>
+            <a href="/w0310/70_pf/srt/sub/trip_best.html">SRT 여행상품 더보기</a>
         </div>
 
     </div><!-- //#section2 -->
